# raglite

./: .copier-answers.yml  .cruft.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
src/raglite/: __init__.py  _bench.py  _chainlit.py  _chatml_function_calling.py  _cli.py  _config.py  _database.py  _delete.py  _embed.py  _eval.py  _extract.py  _flashrank.py  _index.py  _insert.py  _lazy_llama.py  _litellm.py  _markdown.py  _mcp.py  _mistral_ocr.py  _prompts.py  _query_adapter.py  _rag.py  _search.py  _split_chunklets.py  _split_chunks.py  _split_sentences.py  _tools.py  _typing.py  chunk_splitter.py  database_models.py  document_indexer.py  llm.py  markdown_converter.py  proposition_extractor.py  rag.py  search.py  sentence_splitter.py  string_embedder.py
tests/: __init__.py  agent.md  conftest.py  investigate_reranker.py  investigate_reranker_behavior.py  test_basic.py  test_chatml_function_calling.py  test_database.py  test_delete.py  test_embed.py  test_extract.py  test_import.py  test_insert.py  test_lazy_llama.py  test_markdown.py  test_mistral_ocr.py  test_query_adapter.py  test_rag.py  test_rerank.py  test_rerank_golden.py  test_search.py  test_split_chunklets.py  test_split_chunks.py  test_split_sentences.py  test_tool.py
